# stemcell-agent

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
checkpoints/security_analyst/2026-05-15T09-23-31Z/: log.txt  summary.json
checkpoints/security_analyst/2026-05-15T09-23-31Z/iter_0001/: metadata.json
checkpoints/security_analyst/2026-05-15T09-23-31Z/iter_0002/: metadata.json
checkpoints/security_analyst/2026-05-15T09-23-31Z/iter_0003/: metadata.json
checkpoints/security_analyst/2026-05-15T09-23-31Z/iter_0004/: metadata.json
checkpoints/security_analyst/2026-05-15T10-35-11Z/: log.txt
domains/example/: DESCRIPTION.md  examples.yaml
domains/example/materials/: REFERENCE.md
domains/security_analyst/: DESCRIPTION.md  examples.yaml
domains/security_analyst/materials/: log_field_glossary.md  opensearch_query_dsl.md
evals/example/: answers.yaml  examples.yaml  verifier.py
evals/security_analyst/: answers.yaml  examples.yaml  verifier.py
results/: evaluate_2026-05-15T11-04-59Z.json  evaluate_2026-05-15T11-16-04Z.json  train_2026-05-15T10-58-16Z.json
stem/: __main__.py
stem/agent/: BOOTSTRAP_PROMPT.md  base_tools.py
stem/helpers/: llm.py
stem/orchestrator/: checkpoint.py  phases.py  runner.py  status_tracker.py  stop_criterion.py  test_runner.py  workspace.py
test_setup/security_analyst/: docker-compose.yaml  load_data.py
trained_agents/security_analyst_gpt5/: metadata.json
trained_agents/security_analyst_gpt5/agent_workspace/: task_status.json
trained_agents/vanilla/: metadata.json
(+179 files in other folders)
